<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="action_settings">Settings</string>
    <string name="adminText">Are you a reviewer</string>
    <string name="app_name">CrossRoads</string>
    <string name="firstNameHint">First Name</string>
    <string name="firstNameText">First Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="lastNameHint">Last Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="loginButton">Login</string>
    <string name="mobileNumberText">Mobile Number</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_donor_offer">DonorOfferActivity</string>
    <string name="title_activity_donor_offers">My Offers</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_reviewer_donor">ReviewerDonorActivity</string>
    <string name="title_activity_reviewer_donor_list">ReviewerDonorListActivity</string>
    <string name="title_activity_reviewer_item">ReviewerItemActivity</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="confirmButton">Confirm</string>
    <string name="confirmPrompt">Input 4 digit SMS code we sent</string>
    <string name="resentNotification">The confirmation code has been re-sent</string>

    <string name="descriptionTitle">Description:</string>
    <string name="description">Basketball</string>
    <string name="conditionTitle">Condition:</string>
    <string name="condition">Used</string>
    <string name="statusTitle">Status:</string>
    <string name="status">Accepted</string>
    <string name="ReasonTitle">Reason:</string>
    <string name="reasonHint">reason</string>
    <string name="commentsTitle">Comments:</string>
    <string name="commentsHint">comments</string>
    <string name="resendButton">Resend Confirmation</string>
    <string name="automaticSMSConfirmation">We have automatically confirmed your phone number</string>
    <string name="automaticSMSError">Invalid confirmation code</string>

    <string name="photoDescription">Item</string>
    <string name="donorName">Donor Name</string>
    <string name="donorDescription">Item Description</string>
    <string name="donorMobilePhone">+011852-9555-11111t</string>
    <string name="donorDistrict">Hong Kong Island</string>
    <string name="donorNeighborhood">Central</string>


</resources>
